--- a/app-frontend/src/assets/styles/sass/components/_shapefilter.scss
+++ b/app-frontend/src/assets/styles/sass/components/_shapefilter.scss
@@ -25,7 +25,6 @@
 }
 
 .shapefilter-text {
-    color: $white;
     overflow: hidden;
     white-space: nowrap;
     text-overflow: ellipsis;
