--- a/app-frontend/src/assets/styles/sass/theme/high-contrast/layout/_sidebar.scss
+++ b/app-frontend/src/assets/styles/sass/theme/high-contrast/layout/_sidebar.scss
@@ -21,41 +21,3 @@
   border-color: $text-base;
 }
 
-.map-filters,
-.sidebar-dark {
-  background: $off-white;
-  color: $text-base;
-
-  h5, .h5,
-  p,
-  label {
-    color: $text-base;
-  }
-
-  .sidebar-header {
-    background: $shade-light;
-    border-color: darken($border-color-default, 10%);
-
-    .btn.sidebar-header-nav-btn {
-      color: $text-base;
-      border-color: $text-base;
-    }
-  }
-
-  .header-controls .btn-default {
-    @extend .btn-light;
-    color: $text-base !important;
-  }
-
-  .sidebar-list-item {
-    border-bottom-color: $border-color-default;
-
-    &.selected {
-      background-color: $off-white;
-    }
-
-    p.color-light {
-      color: $text-base !important;
-    }
-  }
-}
